@@ -1,17 +1,19 @@
 #include "copyfile.h"
 #include "envdeps.h"
 #include "log.h"
+
 #if defined(__OS2__)
 #define INCL_DOSFILEMGR
 #define INCL_DOSERRORS
 #include <os2.h>
 #elif defined(__NT__)
 #include <windows.h>
-#else
+#endif
+
+#include <errno.h>
 #include <stdio.h>              // remove
 #include <fstream.h>
 #include "findfile.h"
-#endif
 
 /* copyfile is expected to ...
    - return COPY_NOTEXIST if the source path exists, but the specified
@@ -21,17 +23,102 @@
    - return COPY_NOERR otherwise.
 */
 
+static int api_copyfile(const char*, const char*);
+int copyfile_no_api = 0;
+
 int copyfile(const char *cpDest, const char *cpSource)
+{
+#if defined(__OS2__) || defined(__NT__)
+  if (!copyfile_no_api)
+  {
+      return api_copyfile(cpDest, cpSource);
+  }
+#endif  
+
+  static unsigned char *cpBuf=new unsigned char[BUFLEN];
+  int retval=COPY_NOERR;
+
+  logmsg(LOGDBG, "copyfile: using built-in copy routine");
+  logmsg(LOGDBG, "copyfile: copy %s -> %s", cpSource, cpDest);
+
+  ofstream fo(cpDest,ios::bin|ios::out);
+  if (!fo)
+    {
+      logmsg(LOGDBG, "copyfile: failed to create output stream: %s",
+             strerror(errno));
+      return COPY_OTHER;
+    }
+
+  ifstream fi(cpSource,ios::bin|ios::in);
+  if (!fi)
+    {
+      logmsg(LOGDBG, "copyfile: failed to open input stream: %s",
+             strerror(errno));
+
+      fo.close();
+      remove(cpDest);
+
+      // determine if the path exists or not
+      CArray<CString> *pTemp = findfile(cpSource);
+
+      if (pTemp!=NULL)
+        {
+          if (pTemp->Size() == 0)
+            {
+              delete pTemp;
+              logmsg(LOGDBG, "copyfile: source file had zero length");
+              return COPY_NOTEXIST;
+            }
+          delete pTemp;
+        }
+      return COPY_OTHER;
+    }
+
+  logmsg(LOGDBG, "copyfile: successfully opened input and output stream.");
+
+  while (fi)
+    {
+      int gc;
+
+      fi.read(cpBuf,BUFLEN);
+      if ((gc=fi.gcount())!=0)
+        fo.write(cpBuf,gc);
+      if (!fo)
+        {
+          logmsg(LOGDBG, "copyfile: problem when writing output: %s",
+                 strerror(errno));
+          retval=COPY_OTHER;
+          break;
+        }
+    }
+
+  fi.close();
+  fo.close();
+  if (retval != COPY_NOERR)                  // failure
+    {
+      logmsg(LOGDBG, "copyfile: some sort of problem, removing destination");
+      remove(cpDest);
+    }
+  return retval;
+}
+
+
+/* Routine for copying via OS2 or Win32 API. This is a lot faster, so
+   copyfile will call it if possible.
+*/   
+
+static int api_copyfile(const char *cpDest, const char *cpSource)
 {
 #if defined(__OS2__)
   APIRET rc;
   HDIR FindHandle;
   FILEFINDBUF3 FindBuffer;
   ULONG FindCount;
-  
+
   logmsg(LOGDBG, "copyfile: using OS/2 API routines");
-      
+
   FindHandle = HDIR_CREATE; FindCount = 1;
+  logmsg(LOGDBG, "copyfile: DosFindFirst(%s, ...)", cpSource);
   rc = DosFindFirst((PSZ)cpSource, &FindHandle,
                     FILE_ARCHIVED | FILE_SYSTEM | FILE_HIDDEN |
                     FILE_READONLY,
@@ -45,11 +132,16 @@ int copyfile(const char *cpDest, const char *cpSource)
 
   switch(rc)
     {
-    case ERROR_NO_MORE_FILES: return COPY_NOTEXIST;
+    case ERROR_NO_MORE_FILES:
+        logmsg(LOGDBG, "copyfile: source file does not exist.");
+        return COPY_NOTEXIST;
     case NO_ERROR: break;
     default: return COPY_OTHER;
     }
-    
+
+  logmsg(LOGDBG, "copyfile: DosCopy(%s,%s,%lx)",
+                          (PSZ)cpSource,(PSZ)cpDest,DCPY_EXISTING);
+
   rc = DosCopy((PSZ)cpSource,(PSZ)cpDest,DCPY_EXISTING);
 
   logmsg(LOGDBG, "copyfile: DosCopy return code is %d", (int)rc);
@@ -66,9 +158,12 @@ int copyfile(const char *cpDest, const char *cpSource)
   DWORD rv;
 
   logmsg(LOGDBG, "copyfile: using Win32 API routines");
-  
+  logmsg(LOGDBG, "copyfile: CopyFile(%s, %s, %d)", (char *) cpSource,
+         (char *)cpDest, (int)FALSE);
+
   if (CopyFile((LPCTSTR)cpSource,(LPCTSTR)cpDest,FALSE)==TRUE)
     {
+      logmsg(LOGDBG, "copyfile: CopyFile succeeded");
       return COPY_NOERR;
     }
   else
@@ -76,73 +171,22 @@ int copyfile(const char *cpDest, const char *cpSource)
       rv = GetLastError();
       logmsg(LOGDBG, "copyfile: CopyFile last error is %d", (int) rv);
       if (rv == ERROR_FILE_NOT_FOUND)
-        return COPY_NOTEXIST;
+        {
+          logmsg(LOGDBG, "copyfile: source file does not exist");
+          return COPY_NOTEXIST;
+        }
       else
         return COPY_OTHER;
     }
-      
+
 #else
-  static unsigned char *cpBuf=new unsigned char[BUFLEN];
-  int retval=COPY_NOERR;
+ 
+  /* suppress warnings about unused parameters and functions*/
+  ((void)(cpDest)); ((void)(cpSource));  ((void)(api_copyfile));
+  
+  logmsg(LOGERR, "copyfile: FATAL: don't have a copy API on this platform");
+  return COPY_OTHER;
 
-  logmsg(LOGDBG, "copyfile: using built-in routines");
-
-  ofstream fo(cpDest,ios::bin|ios::out);
-  if (!fo)
-    {
-      logmsg(LOGDBG, "copyfile: failed to create output stream");
-      return COPY_OTHER;
-    }
-
-  ifstream fi(cpSource,ios::bin|ios::in);
-  if (!fi) 
-    {
-      logmsg(LOGDBG, "copyfile: failed to open input stream");
-      
-      fo.close();
-      remove(cpDest);
-
-      // determine if the path exists or not
-      CArray<CString> *pTemp = findfile(cpSource);
-      
-      if (pTemp!=NULL)
-        {
-          if (pTemp->Size() == 0)
-            {
-              delete pTemp;
-              logmsg(LOGDBG, "copyfile: source file had zero length");
-              return COPY_NOTEXIST;
-            }
-          delete pTemp;
-        }
-      return COPY_OTHER;
-    }
-
-  while (fi)
-    {
-      int gc;
-
-      fi.read(cpBuf,BUFLEN);
-      if ((gc=fi.gcount())!=0)
-        fo.write(cpBuf,gc);
-      if (!fo)
-        {
-          logmsg(LOGDBG, "copyfile: problem when writing output");
-          retval=COPY_OTHER;
-          break;
-        }
-    }
-
-  fi.close();
-  fo.close();
-  if (retval != COPY_NOERR)                  // failure
-    {
-      logmsg(LOGDBG, "copyfile: some sort of problem, removing destination");
-      remove(cpDest);
-    }
-  return retval;
 #endif
 }
-
-
 
