@@ -5,8 +5,9 @@
 #define COPY_NOTEXIST -1
 #define COPY_OTHER    -2
 
+extern int copyfile_no_api; /* prevent usage of OS copy API */
 int copyfile(const char *cpDest, const char *cpSource);
-#define BUFLEN 32768
+#define BUFLEN 65536
 
 #endif
 
